--- a/index.html
+++ b/index.html
@@ -7,23 +7,14 @@
         <title>Rocketseat - TODO App</title>
     </head>
     <body>
-        <ul>
-            <li>
-                Fazer café
-                <a href="">Excluir</a>
-            </li>
-            <li>
-                Estudar JS
-                <a href="">Excluir</a>
-            </li>
-            <li>
-                Acessar cominidade rocketseat
-                <a href="">Excluir</a>
-            </li>
-        </ul>
-        <input type="text" name="text" 
+        <div id="app">
+            <ul>
+                
+            </ul>
+            <input type="text" name="text" 
             placeholder="digite um todo">
             <button>Adicionar</button>
+        </div>
 
         <script src="todos.js"></script>
     </body>
